# fast-plaid-web

./: ACCOMPLISHMENTS.md  ASYNC_LOADING_SUMMARY.md  BUILD_INDEX_FINAL.md  BUILD_INDEX_GUIDE.md  BUILD_LOCAL_SUCCESS.md  CHANGELOG.md  CLEANUP_PLAN.md  Cargo.toml  HOTFIX_v1.3.0.md  IMPLEMENTATION_SUMMARY.md  INCREMENTAL_UPDATES.md  NATIVE_MATCHING_ROADMAP.md  PERFORMANCE_ANALYSIS.md  PLAID_WASM_ROADMAP.md  QUANTIZATION_GUIDE.md  QUICKREF.md  QUICK_BUILD_INSTRUCTIONS.md  README.md  RELEASE_SUMMARY_v1.3.0.md  SAVE_INDEX_NOW.md  SOLUTION_SUMMARY.md  SUMMARY.md  TEST_RESULTS.md  WASM_TABLE_FIX.md  build_wasm.sh  fix_wasm_table.py  implementation_plan.md  test_incremental_update.html  test_residual_codec.rs
demo/: README.md  build-index.html  index.html  mxbai-integration.js  precompute.html  precomputed-index-loader.js  serve.py  test-pylate.html
docs/: CNAME  README.md  index.html  maxsim-loader.js  maxsim-wasm.js  mxbai-integration.js  paper-abstracts-loader.js  quantization-quality-analysis.md  serve.py  test-encoding.html
docs/archive/: ASYNC_LOADING_IMPLEMENTATION.md  FASTPLAID_LOADING_EXPLANATION.md  LOADING_FIX_SUMMARY.md  OFFLINE_INDEX_GUIDE.md  README_LOADING.md  test_async_loading.md
docs/data/: embeddings_meta.json  fastplaid_meta.json  papers_1000.json  papers_metadata.json
docs/maxsim-wasm/: fast_plaid_rust_bg.wasm  maxsim_web_wasm.d.ts  maxsim_web_wasm.js  maxsim_web_wasm_bg.wasm
docs/pkg/: fast_plaid_rust.d.ts  fast_plaid_rust.js  fast_plaid_rust_bg.wasm  fast_plaid_rust_bg.wasm.d.ts  package.json  pylate_rs_bg.wasm
rust/: lib.rs  lib_wasm.rs  lib_wasm_quantized.rs
rust/index/: create.rs  delete.rs  update.rs
rust/search/: load.rs  padding.rs  search.rs  tensor.rs
rust/utils/: residual_codec.rs
scripts/: build_fastplaid_4bit.py  build_fastplaid_index.js  build_fastplaid_wasm_index.py  build_index_headless.js  build_offline_index.py  build_offline_wasm_index.py  build_precomputed_index.py  convert_to_wasm_format.py  download_arxiv_2025.py  download_neurips_2025.py  download_papers.py  download_semantic_scholar.py  generate_test_papers.py  precompute_embeddings.js  precompute_index.py  rebuild_index_with_rust.js  test_embeddings_offline.py
