[package]
name = "fast_plaid_rust"
version = "1.2.4"
edition = "2021"
build = "build.rs"

[lib]
name = "fast_plaid_rust"
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
anyhow = "1.0.98"
candle-core = "0.9.1"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
parking_lot = "0.12.3"
once_cell = "1.21.3"
indicatif = "0.17.11"
regex = "1.11.1"
rand = "0.9.1"  # Needed by other modules, Candle 0.9.1 is compatible

# WASM support (will be enabled later)
# wasm-bindgen = { version = "0.2", optional = true }
# js-sys = { version = "0.3", optional = true }
# web-sys = { version = "0.3", optional = true }

# Remove PyTorch dependencies:
# tch = { version = "0.20.0" }
# pyo3 = { version = "0.24.2", features = ["extension-module"] }
# pyo3-tch = "0.20.0"
# libc = "0.2.172" (not needed without tch)

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi", "errhandlingapi"] }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
