[package]
name = "fast_plaid_rust"
version = "1.3.0"
edition = "2021"
build = "build.rs"

[lib]
name = "fast_plaid_rust"
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
anyhow = "1.0.98"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Conditional dependencies based on target
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
candle-core = "0.9.1"
parking_lot = "0.12.3"
once_cell = "1.21.3"
indicatif = "0.17.11"
regex = "1.11.1"
rand = "0.9.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Minimal dependencies for WASM - avoid Candle for now due to getrandom conflicts
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Performance",
  "Window",
] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

# Remove PyTorch dependencies:
# tch = { version = "0.20.0" }
# pyo3 = { version = "0.24.2", features = ["extension-module"] }
# pyo3-tch = "0.20.0"
# libc = "0.2.172" (not needed without tch)

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi", "errhandlingapi"] }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-simd"]

# Configure WebAssembly to avoid table growth failures
[package.metadata.wasm-pack.profile.release.wasm-bindgen]
# Pre-allocate larger function table to avoid growth failures on first load
# This prevents "failed to grow table" errors
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
